# tf_idf_articles_tagging

./: .gitignore  README.md  preprocessing.py  requirements.txt  setup.cfg  setup.py  tagging.py  tf_idf.joblib  training.py
articles_tagging/: __init__.py  preprocessing.py  tagging.py  tf_idf.py  training.py
articles_tagging/model_weight/: tf_idf.joblib
examples/: example.py
src/: __init__.py  example.py  tagging.py  training.py
