[metadata]
name = articles_tagging
version = 0.0.1
author = Milena
description = file: README.md
long_description = file: README.md
url = https://github.com/tyugv/tf_idf_articles_tagging
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src